removed db password:)

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=EpamSpringProject
 spring.datasource.url=jdbc:postgresql://localhost:5432/EpamSpringProject
 spring.datasource.username=postgres
-spring.datasource.password=DatabaseSystems2023
+spring.datasource.password= <insert password here, without <> >
 spring.jpa.properties.hibernate.default_schema=public
 spring.datasource.driver-class-name=org.postgresql.Driver
 
