now it will work :D

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=EpamSpringProject
-spring.datasource.url=jdbc:postgresql://localhost:5432/EpamSpringProject
+spring.application.name=PMProject
+spring.datasource.url=jdbc:postgresql://localhost:5432/PMProjectDB
 spring.datasource.username=postgres
 spring.datasource.password=DatabaseSystems2023
 spring.jpa.properties.hibernate.default_schema=public
