--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=PMProject
 spring.datasource.url=jdbc:postgresql://localhost:5432/PMProjectDB
 spring.datasource.username=postgres
-spring.datasource.password=DatabaseSystems2023
+spring.datasource.password=
 spring.jpa.properties.hibernate.default_schema=public
 spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -10,4 +10,15 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.jdbc.core=DEBUG
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 
